--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
   <div class="top-container">
     <div class="mountain-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
       <h1>I'm Kevin</h1>
       <h2 class="sub-heading">a programmer in training.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
+      <img src="Images/mountain.png" alt="mountain-img">
     </div>
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-img" src="images/Smiling_PinkShirt.jpg" alt="profile-portrait-img">
+      <img class="profile-img" src="Images/Smiling_PinkShirt.jpg" alt="profile-portrait-img">
       <h2>Hello.</h2>
       <p class="into">I have an extensively diverse background that encompases people and client management, a creative skillset, and an ease with all things technology. I'm a great home cook, avid baker, lover of photography, and soon to be developer.</p>
     </div>
@@ -31,12 +31,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="computer-code" src="images/coding.png" alt="computer-with-code">
+        <img class="computer-code" src="Images/coding.png" alt="computer-with-code">
         <h3>Code Slinger</h3>
         <p>I’m currently on a journey through various coding languages and hoping to combine what I learn with my design and marketing skills. So far, my initial thoughts have centered around Web Development, UI/UX, and App Dev. Whatever the destination, I’m thoroughly enjoying the ride.</p>
       </div>
       <div class="skill-row">
-        <img class="cookie-icon" src="images/cookies.png" alt="cookies-icon">
+        <img class="cookie-icon" src="Images/cookies.png" alt="cookies-icon">
         <h3>Cookie Aficionado</h3>
         <p>I have an overwhelming passion for food that I can’t contain. There is something utterly intoxicating in whipping up a fresh batch of chocolate chip cookies or experimenting with ingredients. I love learning about the cultures surrounding dishes and the history behind how they came about.</p>
       </div>
